--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.8.1",
     "morgan": "~1.9.1",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "serverless-http": "^3.2.0"
   }
 }
