--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-      { "src": "./bin/www.js", "use": "@vercel/node" }
+      { "src": "./bin/www", "use": "@vercel/node" }
     ],
     "routes": [
       { "src": "/(.*)", "dest": "index.js" }
