--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       { "src": "./bin/www", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "index.js" }
+      { "src": "/(.*)", "dest": "app.js" }
     ],
     "env": {
       "PORT": "3000"
